--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,4 +19,10 @@
         android:layout_height="wrap_content"
         android:text="自定义属性" />
 
+    <Button
+        android:id="@+id/my_view_pager"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="模仿viewPager轮播" />
+
 </LinearLayout>
