--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,6 +23,14 @@
         android:id="@+id/my_view_pager"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="模仿viewPager轮播" />
+        android:text="模仿viewPager轮播"
+        android:textAllCaps="false" />
+
+    <Button
+        android:id="@+id/custom_head_image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="仿iPhone头像选择效果"
+        android:textAllCaps="false" />
 
 </LinearLayout>
