--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,4 +33,11 @@
         android:text="仿iPhone头像选择效果"
         android:textAllCaps="false" />
 
+    <Button
+        android:id="@+id/gesture_pw"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="手势密码"
+        android:textAllCaps="false" />
+
 </LinearLayout>
